[package]
name = "qt_all"
version = "0.1.0"
authors = ["Pavel Strakhov <ri@idzaaus.org>"]

[dependencies]
cpp_utils = "0.2"
qt_core = "0.2"
qt_gui = "0.2"
qt_widgets = "0.2"
qt_ui_tools = "0.2"
qt_3d_core = "0.2.0"
qt_3d_render = "0.2.0"
qt_3d_input = "0.2.0"
qt_3d_logic = "0.2.0"
qt_3d_extras = "0.2.0"
